[package]
name = "nudge"
version = "0.1.0"
edition = "2021"
description = "Gently push your API into action."
readme = "README.md"

[dependencies]
clap = { version = "4.5.38", features = ["derive", "unicode", "wrap_help"] }
clap_complete_command = "0.6.1"
http = "1.3.1"
oas3 = { version = "0.16.1", features = ["yaml-spec"] }
